# cli

./: CMakeLists.txt  README.md
demo/: demo_app.c  demo_app.h  main.c  selftest.c
include/embcli/: embcli.h  embcli_telnet.h
src/: embcli.c  embcli_telnet.c
